# Zappy_2_partfolio_project

./: db.sqlite3  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_description_blog_text.py
blog/templates/blog/: all_blogs.html  detail.html
portfolio/: settings.py  urls.py
portfolioapp/: models.py  views.py
portfolioapp/migrations/: 0001_initial.py
portfolioapp/templates/portfolioapp/: base.html  home.html  nav.html
