[tool.poetry]
name = "portfolio_project"
version = "0.1.0"
description = ""
authors = ["razbudin <razbudin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
pillow = "^10.2.0"

[tool.poetry.dev-dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
